--- a/6.2.0.md
+++ b/6.2.0.md
@@ -1,9 +1,9 @@
 The Switch 6.2.0 system update was released on November 19, 2018. This
 Switch update was released for the following regions: ALL.
 
-Security flaws fixed: \<fill this in manually later, see the
-updatedetails page from the ninupdates-report page(s) once available for
-now\>.
+Security flaws fixed: Yes This update burns an additional fuse and has a
+fuse count of 8. 6.2.0 changes fundamental key
+generation.
 
 ## Change-log
 
